# cpptricks

./: .gitignore  CMakeLists.txt  README.md  invsqrt.h  pairwise_iterator.h  stl_eigen_facade.h  test.cpp
